buildsystem; ide; epj2make; tarball: bypass use of @objects.lst if platform is not windows when calling ar. remove remaining strapfiles. update Makefiles.epj.

--- a/deps/jpeg-9a/Makefile
+++ b/deps/jpeg-9a/Makefile
@@ -176,7 +176,11 @@ ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
 endif
 else
+ifdef WINDOWS_HOST
+	$(AR) rcs $(TARGET) @$(OBJ)objects.lst $(LIBS)
+else
 	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
+endif
 endif
 ifdef SHARED_LIBRARY_TARGET
 ifdef LINUX_TARGET
