buildsystem,makefiles,tarball: improve distclean targets to remove .configs/, *.ews and *.Makefile as well as obj/. generate makefiles accordingly.

--- a/compiler/libec/Makefile.bootstrap
+++ b/compiler/libec/Makefile.bootstrap
@@ -259,8 +259,8 @@ clean: cleantarget
 realclean: cleantarget
 	$(call rmr,$(OBJ))
 
-distclean: cleantarget
-	$(call rmr,obj/)
+distclean:
+	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
 
 Makefile.bootstrap: ;
 $(_CF_DIR)crossplatform.mk: ;
