--- a/ecere/Makefile
+++ b/ecere/Makefile
@@ -2051,8 +2051,8 @@ realclean: cleantarget
 	$(_MAKE) -f Makefile.ecereCOM realclean
 	$(_MAKE) -f Makefile.vanilla realclean
 
-distclean: cleantarget
-	$(call rmr,obj/)
+distclean:
+	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
 
 Makefile: ;
 $(_CF_DIR)crossplatform.mk: ;
