--- a/compiler/bootstrap/Makefile
+++ b/compiler/bootstrap/Makefile
@@ -38,13 +38,8 @@ realclean: cleantarget
 	cd ecc && $(_MAKE) realclean
 	cd ecs && $(_MAKE) realclean
 
-distclean: cleantarget
-	$(call rmr,obj/)
-	cd ecere && $(_MAKE) distclean
-	cd libec && $(_MAKE) distclean
-	cd ecp && $(_MAKE) distclean
-	cd ecc && $(_MAKE) distclean
-	cd ecs && $(_MAKE) distclean
+distclean:
+	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
 
 Makefile: ;
 $(_CF_DIR)crossplatform.mk: ;
