--- a/ecere/Makefile.vanilla
+++ b/ecere/Makefile.vanilla
@@ -1470,8 +1470,8 @@ clean: cleantarget
 realclean: cleantarget
 	$(call rmr,$(OBJ))
 
-distclean: cleantarget
-	$(call rmr,obj/)
+distclean:
+	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
 
 Makefile.vanilla: ;
 $(_CF_DIR)crossplatform.mk: ;
