ide: move windows specific code (setEcereLanguageInWinRegEnvironment) to process.ec to keep IDESettings.ec clean. replace MAKEFILE_GENERATOR by ECERE_DOCUMENTOR and ECERE_EPJ2MAKE. use new defines to exclude LanguageRestart() stuff from documentor and epj2make. fix process.ec import (ide vs ecere) too much.

--- a/documentor/Makefile
+++ b/documentor/Makefile
@@ -85,7 +85,8 @@ LIBS += \
 endif
 
 PRJ_CFLAGS += \
-	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w \
+			 -DECERE_DOCUMENTOR
 
 ECFLAGS += -module $(MODULE)
 ECFLAGS += \
